# pizza-delivery

./: .env  pyproject.toml
pizza_delivery/: auth_routes.py  init_db.py  main.py  models.py  order_routes.py  pizza_db.py  setting.py
